[tool.poetry]
name = "lh-ai-starter-kit"
version = "0.1.0"
description = "AI Starter Kit for LittleHorse"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiofiles = "24.1.0"
aiohttp = "3.11.14"
altair = "5.5.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.9.0"
asttokens = "3.0.0"
attrs = "25.3.0"
Authlib = "1.4.1"
backoff = "2.2.1"
beautifulsoup4 = "4.13.4"
blinker = "1.9.0"
cachetools = "5.5.2"
cassandra-driver = "3.29.2"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
coloredlogs = "15.0.1"
contourpy = "1.3.1"
cryptography = "44.0.2"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
decorator = "5.2.1"
Deprecated = "1.2.18"
distro = "1.9.0"
effdet = "0.4.1"
emoji = "2.14.1"
et_xmlfile = "2.0.0"
eval_type_backport = "0.2.2"
executing = "2.2.0"
filelock = "3.18.0"
filetype = "1.2.0"
flatbuffers = "25.2.10"
fonttools = "4.56.0"
frozenlist = "1.5.0"
fsspec = "2025.3.0"
geomet = "0.2.1.post1"
gitdb = "4.0.12"
GitPython = "3.1.44"
google-api-core = "2.24.2"
google-auth = "2.38.0"
google-cloud-vision = "3.10.1"
googleapis-common-protos = "1.69.2"
greenlet = "3.1.1"
grpcio = "1.69.0"
grpcio-status = "1.59.0"
h11 = "0.14.0"
html5lib = "1.1"
httpcore = "1.0.8"
httpx = "0.28.1"
httpx-sse = "0.4.0"
huggingface-hub = "0.29.3"
humanfriendly = "10.0"
idna = "3.10"
iopath = "0.1.10"
ipython = "9.1.0"
jedi = "0.19.2"
Jinja2 = "3.1.6"
jiter = "0.9.0"
joblib = "1.4.2"
jproperties = "2.1.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
kiwisolver = "1.4.8"
langchain = "0.3.20"
langchain-community = "0.3.19"
langchain-core = "0.3.45"
langchain-openai = "0.3.9"
langchain-postgres = "0.0.13"
langchain-text-splitters = "0.3.6"
langdetect = "1.0.9"
langsmith = "0.3.15"
layoutparser = "0.3.4"
littlehorse-client = "0.13.1"
lxml = "5.3.1"
Markdown = "3.7"
MarkupSafe = "3.0.2"
marshmallow = "3.26.1"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
multidict = "6.2.0"
mypy-extensions = "1.0.0"
narwhals = "1.31.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
nltk = "3.9.1"
numpy = "1.26.4"
olefile = "0.47"
omegaconf = "2.3.0"
onnx = "1.17.0"
onnxruntime = "1.21.0"
openai = "1.66.3"
opencv-python = "4.11.0.86"
openpyxl = "3.1.5"
orjson = "3.10.15"
packaging = "24.2"
pandas = "2.2.3"
parso = "0.8.4"
pdf2image = "1.17.0"
pdfminer_six = "20231228"
pdfplumber = "0.11.5"
pexpect = "4.9.0"
pgvector = "0.3.6"
pi_heif = "0.22.0"
pikepdf = "9.5.2"
pillow = "11.1.0"
portalocker = "3.1.1"
prompt_toolkit = "3.0.51"
propcache = "0.3.0"
proto-plus = "1.26.1"
protobuf = "4.23.4"
psutil = "7.0.0"
psycopg = "3.2.6"
psycopg-pool = "3.2.6"
psycopg2 = "2.9.10"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pyarrow = "19.0.1"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.1"
pycocotools = "2.0.8"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
pydantic_core = "2.27.2"
pydeck = "0.9.1"
Pygments = "2.19.1"
pypandoc = "1.15"
pyparsing = "3.2.1"
pypdf = "5.4.0"
pypdfium2 = "4.30.1"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.2"
python-dotenv = "1.0.1"
python-iso639 = "2025.2.18"
python-magic = "0.4.27"
python-multipart = "0.0.20"
python-oxmsg = "0.0.2"
python-pptx = "1.0.2"
pytz = "2025.1"
PyYAML = "6.0.2"
RapidFuzz = "3.12.2"
redis = "5.2.1"
referencing = "0.36.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rpds-py = "0.24.0"
rsa = "4.9"
safetensors = "0.5.3"
scipy = "1.15.2"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
soupsieve = "2.6"
SQLAlchemy = "2.0.39"
stack-data = "0.6.3"
streamlit = "1.43.2"
sympy = "1.13.1"
tenacity = "9.0.0"
tiktoken = "0.9.0"
timm = "1.0.15"
tokenizers = "0.21.1"
toml = "0.10.2"
torch = "2.6.0"
torchvision = "0.21.0"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
transformers = "4.49.0"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing_extensions = "4.13.2"
tzdata = "2025.1"
unstructured = "0.16.10"
unstructured-client = "0.31.1"
unstructured-inference = "0.8.1"
urllib3 = "2.4.0"
watchdog = "6.0.0"
wcwidth = "0.2.13"
webencodings = "0.5.1"
wrapt = "1.17.2"
xlrd = "2.0.1"
XlsxWriter = "3.2.2"
yarl = "1.18.3"
zstandard = "0.23.0"
pytesseract = "0.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"